# product_store

./: README.md
backend/: .dockerignore  Dockerfile  Makefile  backend-starter.sh  pyproject.toml
backend/config/: application_conf.ini  docker_application_conf.ini
backend/migrations/: env.py
backend/migrations/versions/: 0aa57e0fa697_first_commit.py  8eefdc9a447f_add_product_table.py
backend/postman/: product_store.postman_collection.json
backend/scripts/: run-backend.sh
backend/src/: settings.py
backend/src/api/: main.py  socketio_server.py
backend/src/api/rest/api_v1/: route_builder.py
backend/src/api/rest/api_v1/products/: routes.py  schema.py
backend/src/apps/products/application/use_cases/: __init__.py  buy_product.py  create_product.py  get_product.py  list_products.py  search_products.py  update_prod_partials.py  update_product.py
backend/src/apps/products/domain/models/: __init__.py  products.py
backend/src/modules/shared/: data.json  database.py  logger.py  seed.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/actions/: productActions.js
frontend/src/components/: Header.jsx  Main.jsx  ProductCard.jsx  ProductList.jsx  SearchInput.jsx
frontend/src/context/: ProductContext.jsx
frontend/src/reducers/: products.js  root.js
frontend/src/sagas/: products.js
frontend/src/shared/: api.js  socket.js
frontend/src/store/: index.js
frontend/src/utils/: api.js
infra/: Makefile  docker-compose.yml  starter.sh
