[tool.poetry]
name = "product-store"
version = "0.1.0"
description = "Backend server for the products store"
authors = ["mauudev <mtrigo1432@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
python-dotenv = "^1.0.0"
logzero = "^1.7.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
black = "^23.12.1"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
pydantic = "^2.5.3"
fastapi-pagination = "^0.12.14"
python-socketio = "^5.11.0"



[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint]
disable = [
    "missing-docstring",
    "fixme",
    "C0103",
    "C0301",
    "R0903",
    "C0413",
    "W1203",
    "I1101",
    "W1309",
    "R0902",
    "C0415",
]

[tool.black]
line-length = 94